--- a/DestoPesto/DestoPesto/Views/SignInPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignInPage.xaml
@@ -11,67 +11,72 @@
         </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="15*" />
+                <RowDefinition Height="*"/>
 
+            </Grid.RowDefinitions>
 
-        <StackLayout>
+            <StackLayout>
 
-            <Image Source="{AppThemeBinding Light=login_header.png, Dark=login_header.png}"  />
+                <Image Source="{AppThemeBinding Light=login_header.png, Dark=login_header.png}"  />
 
-            <StackLayout Padding="0" Margin="15,10">
+                <StackLayout Padding="0" Margin="15,10">
 
-                <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
-                    <StackLayout Orientation="Horizontal">
-                        <Frame BackgroundColor="Transparent" HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
-                            <Image Source="mail.png" Aspect="AspectFill" Margin="0"/>
-                        </Frame>
+                    <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                        <StackLayout Orientation="Horizontal">
+                            <Frame BackgroundColor="Transparent" HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
+                                <Image Source="mail.png" Aspect="AspectFill" Margin="0"/>
+                            </Frame>
 
-                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Margin="0,0,20,0" Keyboard="Email" >
-                            <Entry.Behaviors>
-                                <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
-                                    <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
-                                    <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1"/>
-                                </xct:MultiValidationBehavior>
-                            </Entry.Behaviors>
-                        </Entry>
+                            <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Margin="0,0,20,0" Keyboard="Email" >
+                                <Entry.Behaviors>
+                                    <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
+                                        <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
+                                        <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1"/>
+                                    </xct:MultiValidationBehavior>
+                                </Entry.Behaviors>
+                            </Entry>
+                        </StackLayout>
+                    </Frame>
+                    <StackLayout  Orientation="Horizontal">
+
+                        <Label Text="{x:Static resources:Properties.Resources.SomethingIsNotRightEmail}" x:Name="txtWrongEmail" IsVisible="false" TextColor="Red" FontSize="Micro" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
+
                     </StackLayout>
-                </Frame>
-                <StackLayout  Orientation="Horizontal">
-
-                    <Label Text="{x:Static resources:Properties.Resources.SomethingIsNotRightEmail}" x:Name="txtWrongEmail" IsVisible="false" TextColor="Red" FontSize="Micro" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
-
-                </StackLayout>
 
 
-                <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
-                    <StackLayout Orientation="Horizontal">
-                        <Frame HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
-                            <Image Source="key.png" Aspect="AspectFill" Margin="0"/>
-                        </Frame>
-                        <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" PlaceholderColor="Gray"  IsPassword="True" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0" TextChanged="txtPassword_TextChanged">
-                            <Entry.Behaviors>
-                                <xct:TextValidationBehavior x:Name="PasswordValidator"  DecorationFlags="Trim" MinimumLength="1" Flags="ValidateOnValueChanging"/>
-                            </Entry.Behaviors>
-                        </Entry>
+                    <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                        <StackLayout Orientation="Horizontal">
+                            <Frame HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
+                                <Image Source="key.png" Aspect="AspectFill" Margin="0"/>
+                            </Frame>
+                            <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" PlaceholderColor="Gray"  IsPassword="True" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0" TextChanged="txtPassword_TextChanged">
+                                <Entry.Behaviors>
+                                    <xct:TextValidationBehavior x:Name="PasswordValidator"  DecorationFlags="Trim" MinimumLength="1" Flags="ValidateOnValueChanging"/>
+                                </Entry.Behaviors>
+                            </Entry>
+                        </StackLayout>
+                    </Frame>
+                    <StackLayout  Orientation="Horizontal">
+                        <Label Text="{x:Static resources:Properties.Resources.SomethingIsNotRightPassword}" x:Name="txtWrongPass" IsVisible="false" TextColor="Red" FontSize="Micro" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
                     </StackLayout>
-                </Frame>
-                <StackLayout  Orientation="Horizontal">
-                    <Label Text="{x:Static resources:Properties.Resources.SomethingIsNotRightPassword}" x:Name="txtWrongPass" IsVisible="false" TextColor="Red" FontSize="Micro" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
-                </StackLayout>
 
 
-                <StackLayout  Orientation="Horizontal">
+                    <StackLayout  Orientation="Horizontal">
 
-                    <Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}"  TextColor="DarkGray" FontSize="Small" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
+                        <Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}"  TextColor="DarkGray" FontSize="Small" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
 
-                </StackLayout>
+                    </StackLayout>
 
-                <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" IsEnabled="{Binding IsValid, Source={x:Reference  EmailMultiValidator}}" />
-                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                    <Label Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" FontSize="Small"/>
-                    <Label Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" FontSize="Small"/>
-                </StackLayout>
+                    <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" IsEnabled="{Binding IsValid, Source={x:Reference  EmailMultiValidator}}" />
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                        <Label Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" FontSize="Small"/>
+                        <Label Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" FontSize="Small"/>
+                    </StackLayout>
 
-                <!--<StackLayout Margin="0,25,0,0" Padding="0">
+                    <!--<StackLayout Margin="0,25,0,0" Padding="0">
                     <Grid>
                         <BoxView BackgroundColor="#828282" HeightRequest="1" WidthRequest="150"  HorizontalOptions="Center" VerticalOptions="Center"/>
                         <Frame BackgroundColor="White" HeightRequest="45" WidthRequest="45" CornerRadius="45" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">
@@ -80,8 +85,11 @@
                         </Frame>
                     </Grid>
                 </StackLayout>-->
-            </StackLayout>
+                </StackLayout>
 
-        </StackLayout>
+               
+            </StackLayout>
+            <Image Grid.Row="1" Source="logoback.png" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
