--- a/DestoPesto/DestoPesto/Views/IntroPage.xaml
+++ b/DestoPesto/DestoPesto/Views/IntroPage.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <pages:PopupPage   x:Class="DestoPesto.Views.IntroPage"
-        
-         xmlns="http://xamarin.com/schemas/2014/forms"
+        xmlns="http://xamarin.com/schemas/2014/forms"
         xmlns:pages="http://rotorgames.com" 
-                   xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+        xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+        xmlns:resources="clr-namespace:DestoPesto"
+
          xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation DurationIn="400"
@@ -26,14 +27,37 @@
            IsClippedToBounds="True"
            BackgroundColor="WhiteSmoke" Padding="10,20,10,20">
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Frame  HeightRequest="20" HorizontalOptions="Center" VerticalOptions="Center" HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="10" >
+                    <Image  HorizontalOptions="Center" InputTransparent="True" Source="ic_launcher.png" VerticalOptions="Center" Aspect="AspectFit" />
+                </Frame>
+                <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.WelcomeMessage}" FontSize="Title"   VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" />
+            </Grid>
             <StackLayout Orientation="Horizontal">
-                <Label Text="Don't show again" VerticalOptions="Center"></Label>
-                <Switch IsToggled="{Binding DontShowAgain}" VerticalOptions="Center" Scale="0.9" AnchorY="1" HorizontalOptions="StartAndExpand" Margin="0,0,10,0" OnColor="Coral" ThumbColor="#d9d9d9"   />
-                <!--<CheckBox  IsChecked="{Binding DontShowAgain}"></CheckBox>-->
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="2*"/>
+                    </Grid.RowDefinitions>
+
+
+                    <Label  Text="{x:Static resources:Properties.Resources.InstructionsMessage}" HorizontalTextAlignment="Start" HorizontalOptions="FillAndExpand" LineBreakMode="WordWrap" VerticalOptions="Center"></Label>
+                    <Grid Grid.Row="1" Padding="5,5,5,5" >
+                        <Grid.ColumnDefinitions>
+
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+
+                        </Grid.ColumnDefinitions>
+                        <Switch IsToggled="{Binding DontShowAgain}"  VerticalOptions="Center" Scale="1.5"  HorizontalOptions="StartAndExpand"  OnColor="#0D6EFD" ThumbColor="#d9d9d9"   />
+                        <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.DontShowAgain}" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" Padding="5"/>
+                    </Grid>
+                    <!--<CheckBox  IsChecked="{Binding DontShowAgain}"></CheckBox>-->
+                </Grid>
             </StackLayout>
         </StackLayout>
     </Frame>
