--- a/DestoPesto/DestoPesto/Views/ItemsPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ItemsPage.xaml
@@ -17,7 +17,6 @@
         <Grid.RowDefinitions>
 
             <RowDefinition Height="*" />
-
             <RowDefinition Height="2*" />
             <RowDefinition Height="8*" />
 
@@ -32,7 +31,7 @@
 
         <Image    Grid.Row="1"    Source="wifi.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Margin="10,0,0,0"></Image>
         <Label Grid.Column="1" Grid.Row="1" Text="{x:Static resources:Properties.Resources.sendDataWifi}" TextColor="#0D6EFD" FontSize="Medium" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
-        <Switch Grid.Column="2" Grid.Row="1" x:Name="toggle" VerticalOptions="CenterAndExpand" Scale="1.5" IsToggled="true" AnchorY="1" HorizontalOptions="StartAndExpand" Margin="0,0,10,0" Toggled="Switch_Toggled" OnColor="#0D6EFD"/>
+        <Switch Grid.Column="2" Grid.Row="1" x:Name="toggle" VerticalOptions="CenterAndExpand" Scale="1.5" IsToggled="true" AnchorY="1" HorizontalOptions="StartAndExpand" Margin="0,0,10,0" Toggled="Switch_Toggled" OnColor="#0D6EFD" ThumbColor="#d9d9d9"   />
 
     </Grid>
 
