--- a/DestoPesto/DestoPesto/Views/IntroPage.xaml
+++ b/DestoPesto/DestoPesto/Views/IntroPage.xaml
@@ -4,6 +4,7 @@
         xmlns:pages="http://rotorgames.com" 
         xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
         xmlns:resources="clr-namespace:DestoPesto"
+        xmlns:extensions="clr-namespace:DestoPesto.Extensions"
 
          xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <pages:PopupPage.Animation>
@@ -33,7 +34,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Frame  HeightRequest="20" HorizontalOptions="Center" VerticalOptions="Center" HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="10" >
-                    <Image  HorizontalOptions="Center" InputTransparent="True" Source="ic_launcher.png" VerticalOptions="Center" Aspect="AspectFit" />
+                    <Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.icon.png}" VerticalOptions="Center" Aspect="AspectFit" />
                 </Frame>
                 <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.WelcomeMessage}" FontSize="Title"   VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" />
             </Grid>
