--- a/DestoPesto/DestoPesto/Views/LoginPage.xaml
+++ b/DestoPesto/DestoPesto/Views/LoginPage.xaml
@@ -25,7 +25,7 @@
 
             <StackLayout>
 
-                <Image  Source="{extensions:ImageResource DestoPesto.Images.login_header.png}"  />
+                <Image  Source="{extensions:ImageResource DestoPesto.Images.login_header.png}" BackgroundColor="#0D6EFD" HeightRequest="120" />
 
                 <!--<StackLayout Margin="0">
                             -->
@@ -49,7 +49,7 @@
                     <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" IsVisible="False">
                         <StackLayout Orientation="Horizontal">
                             <Frame HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
-                                <Image Source="key.png" Aspect="AspectFill" Margin="0"/>
+                                <Image Source="{extensions:ImageResource DestoPesto.Images.key.png}" Aspect="AspectFill" Margin="0"/>
                             </Frame>
 
                             <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" PlaceholderColor="Gray"  IsPassword="True" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
@@ -131,7 +131,8 @@
                                                 <ColumnDefinition Width="*"/>
                                                 <ColumnDefinition Width="10*"/>
                                             </Grid.ColumnDefinitions>
-                                            <Image Source="google_logo.png"  />
+                                            <Image Source="{extensions:ImageResource DestoPesto.Images.google_logo.png}" />
+                                            <!--<Image Source="google_logo.png"  />-->
                                             <Label Grid.Column="1"  Text="{x:Static resources:Properties.Resources.GoogleLogin}" TextColor="Black"  FontAttributes="None" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                                         </Grid>
                                     </StackLayout>
@@ -148,7 +149,8 @@
                                                 <ColumnDefinition Width="*"/>
                                                 <ColumnDefinition Width="10*"/>
                                             </Grid.ColumnDefinitions>
-                                            <Image Source="applelogo.png"  />
+                                            <!--<Image Source="applelogo.png"  />-->
+                                            <Image Source="{extensions:ImageResource DestoPesto.Images.applelogo.png}" />
                                             <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.AppleLogin}"  TextColor="Black"  FontAttributes="None" LineBreakMode="WordWrap"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                                         </Grid>
                                     </StackLayout>
@@ -162,7 +164,8 @@
                                                 <ColumnDefinition Width="*"/>
                                                 <ColumnDefinition Width="10*"/>
                                             </Grid.ColumnDefinitions>
-                                            <Image Source="email.png"  />
+                                            <!--<Image Source="email.png"  />-->
+                                            <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" />
                                             <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.EmailLogin}" TextColor="Black"  FontAttributes="None" LineBreakMode="WordWrap"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                                         </Grid>
                                     </StackLayout>
@@ -173,7 +176,7 @@
 
                         </StackLayout>
                     </Grid>
-                    <Image Source="logoback.png" HeightRequest="30"  HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
+                    <Image Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HeightRequest="30"  HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
 
                 </StackLayout>
 
