--- a/DestoPesto/DestoPesto/Views/MessageDialogPopup.xaml
+++ b/DestoPesto/DestoPesto/Views/MessageDialogPopup.xaml
@@ -4,6 +4,7 @@
                   xmlns:pages="http://rotorgames.com" 
                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                   xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+                  xmlns:extensions="clr-namespace:DestoPesto.Extensions"
                   CloseWhenBackgroundIsClicked="False" >
 
     <pages:PopupPage.Animation>
@@ -47,7 +48,7 @@
                         </Grid.ColumnDefinitions>
                     </Grid>-->
                     <Frame  HorizontalOptions="Center" VerticalOptions="Center" HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="10" >
-                        <Image  HorizontalOptions="Center" InputTransparent="True" Source="ic_launcher.png" VerticalOptions="Center" />
+                        <Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.icon.png}" VerticalOptions="Center" />
                     </Frame>
                     <Label Grid.Column="1" Text="{Binding MessageDialogTitle}" FontSize="Title" FontAttributes="Bold"  HorizontalTextAlignment="Center"  TextColor="#0D6EFD" VerticalOptions="Center"></Label>
                 </StackLayout>
