--- a/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
@@ -4,6 +4,7 @@
              x:Class="DestoPesto.Views.SubmisionPopupPage"
                  xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
                  xmlns:hl="clr-namespace:Hyperlink"
+                              xmlns:extensions="clr-namespace:DestoPesto.Extensions"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup">
     <!--  You can set an animation in the xaml file or in the csharp code behind  -->
     <pages:PopupPage.Animation>
@@ -40,7 +41,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <StackLayout BackgroundColor="#0D6EFD" Grid.ColumnSpan="3">
-                <Image HeightRequest="40" Grid.Column="1" HorizontalOptions="CenterAndExpand" InputTransparent="True" Source="logo_landscape_blue_back.png" VerticalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="SizeProportional" />
+                <Image HeightRequest="40" Grid.Column="1" HorizontalOptions="StartAndExpand" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="SizeProportional" />
             </StackLayout>
             <Label Grid.Row="1"  Grid.Column="1" Text="{Binding Description}" FontAttributes="Bold" HorizontalTextAlignment="Center" FontSize="Header" VerticalOptions="Center" HorizontalOptions="Center" LineBreakMode="WordWrap"></Label>
             <!--<Grid Padding="10,20,10,20" Grid.Row="1">-->
