--- a/DestoPesto/DestoPesto/Views/MessageDialogPopup.xaml
+++ b/DestoPesto/DestoPesto/Views/MessageDialogPopup.xaml
@@ -37,7 +37,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <StackLayout Grid.ColumnSpan="4" Orientation="Horizontal"  >
@@ -50,7 +50,7 @@
                     <Frame  HorizontalOptions="Center" VerticalOptions="Center" HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="10" >
                         <Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.icon.png}" VerticalOptions="Center" />
                     </Frame>
-                    <Label Grid.Column="1" Text="{Binding MessageDialogTitle}" FontSize="Title" FontAttributes="Bold"  HorizontalTextAlignment="Center"  TextColor="#0D6EFD" VerticalOptions="Center"></Label>
+                    <Label Grid.Column="1" Text="{Binding MessageDialogTitle}" FontSize="Title" HorizontalTextAlignment="Center"  TextColor="#0D6EFD" VerticalOptions="Center"></Label>
                 </StackLayout>
 
                 <Label Grid.Row="1" Grid.ColumnSpan="4" Text="{Binding MessageDialogMessage}" LineBreakMode="WordWrap" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"></Label>
