--- a/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
@@ -36,7 +36,7 @@
                                                             <ColumnDefinition Width="20*"/>
                                                         </Grid.ColumnDefinitions>
                                                         <Label Grid.Column="1" FontSize="Subtitle"  Text="{Binding Path=CategoryName}"></Label>
-                                                        <Label Grid.Column="1" Grid.Row="1" FontSize="Caption" Text="{Binding Path=fullAddress}"></Label>
+                                                        <Label Grid.Column="1" Grid.Row="1"  Text="{Binding Path=fullAddress}"></Label>
                                                         <Label  Text="=" />
                                                     </Grid>
 
