Message Dialog Popup fixed

--- a/DestoPesto/DestoPesto/Views/MessageDialogPopup.xaml
+++ b/DestoPesto/DestoPesto/Views/MessageDialogPopup.xaml
@@ -37,7 +37,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="4*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <StackLayout Grid.ColumnSpan="4" Orientation="Horizontal"  >
