--- a/DestoPesto/DestoPesto/Views/MessageDialogPopup.xaml
+++ b/DestoPesto/DestoPesto/Views/MessageDialogPopup.xaml
@@ -22,41 +22,41 @@
            HorizontalOptions="Center" 
            VerticalOptions="Center"
            HasShadow="True"
-           HeightRequest="300"
-           
+           HeightRequest="250"
            BackgroundColor="WhiteSmoke"
            >
 
         <StackLayout >
             <Grid HorizontalOptions="Fill" >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="2*"/>
-                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="3*"/>
+                    <RowDefinition Height="6*"/>
                     <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="5*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <StackLayout Grid.ColumnSpan="4" Orientation="Horizontal"  >
+                <StackLayout  Grid.ColumnSpan="3" Orientation="Horizontal"  >
                     <!--<Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                     </Grid>-->
-                    <Frame  HorizontalOptions="Center" VerticalOptions="Center" HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="10" >
-                        <Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.icon.png}" VerticalOptions="Center" />
+                    <Frame   HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="10" >
+                        <!--<Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.icon.png}" VerticalOptions="Center" />-->
+                        <Image   InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.destopesto_logo_square_blue.png}" VerticalOptions="Center" />
                     </Frame>
-                    <Label Grid.Column="1" Text="{Binding MessageDialogTitle}" FontSize="Title" HorizontalTextAlignment="Center"  TextColor="#0D6EFD" VerticalOptions="Center"></Label>
+                    <!--<Label Grid.Column="1" Text="{Binding MessageDialogTitle}" FontSize="Title" HorizontalTextAlignment="Center"  TextColor="#0D6EFD" VerticalOptions="Center"></Label>-->
                 </StackLayout>
 
-                <Label Grid.Row="1" Grid.ColumnSpan="4" Text="{Binding MessageDialogMessage}" LineBreakMode="WordWrap" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"></Label>
+                <Label x:Name="MessagePlacement" Grid.Row="1" Grid.ColumnSpan="4" Text="{Binding MessageDialogMessage}" LineBreakMode="WordWrap" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"></Label>
 
-                <Button Grid.Row="2" Grid.Column="1" HeightRequest="30" Text="{Binding LeftBtnText}" x:Name="LeftBtn" Clicked="LeftBtn_Clicked"  HorizontalOptions="Start"   BackgroundColor="#0D6EFD" TextColor="White" Padding="5" CornerRadius="5" TextTransform="None"/>
-                <Button Grid.Row="2" Grid.Column="2" HeightRequest="30" Text="{Binding RightBtnText}" x:Name="RightBtn" Clicked="RightBtn_Clicked"  HorizontalOptions="End"   BackgroundColor="#0D6EFD" TextColor="White" Padding="5" CornerRadius="5" TextTransform="None"/>
+                <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HeightRequest="30" Text="{Binding LeftBtnText}" x:Name="LeftBtn" Clicked="LeftBtn_Clicked"  HorizontalOptions="Start"   BackgroundColor="#0D6EFD" TextColor="White" Padding="5" CornerRadius="5" TextTransform="None"/>
+                <Button Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" HeightRequest="30" Text="{Binding RightBtnText}" x:Name="RightBtn" Clicked="RightBtn_Clicked"  HorizontalOptions="End"   BackgroundColor="#0D6EFD" TextColor="White" Padding="5" CornerRadius="5" TextTransform="None"/>
             </Grid>
         </StackLayout>
     </Frame>
